fix css class overlaps

--- a/src/components/character/character-select/character-select.css
+++ b/src/components/character/character-select/character-select.css
@@ -1,4 +1,4 @@
-.character-selector {
+.character-select {
   width: 80%;
   margin: 0 10vw;
   background: rgba(0, 0, 0, 0.4);
